2001-07-30  Bharat Mediratta  <bharat@menalto.com>

	* Added the ability for Gallery to use the Nuke database.  If you
	  run Gallery under Nuke it will automatically detect the Nuke
	  user database and use it.  One known problem currently is that
	  only admins can create new top level albums.

	* Fixed bug #433374 (Gallery doesn't work well under http/https)
	  by adding code to detect https and rewrite the
	  $gallery->app->photoAlbumURL accordingly.	

	* Fixed a variety of small Nuke problems (edit thumbnails feature 
	  broken, upload progress window had broken images)

	* Fixed conflict between User class and PHPLib's User class

2001-07-28  Bharat Mediratta  <bharat@menalto.com>

	* Fixed bug #435495: Can't fetch ZIP file by URL.  I fixed this in 
	  such a way that Gallery can now also handle nested ZIP files. 

2001-07-27  Bharat Mediratta  <bharat@menalto.com>

	* Two changes to the image cropping java applet:
	  + Fixed a minor bug where the image URL had a port value of -1
	    this didn't seem to cause problems (!)
	  + Added the ability to maximize the selection by double clicking
	    on any part of the image.

2001-07-24  John Kirkland  <jpk@bl.org>

	* Re-fixed bug #442445 "sub-album permission".  My fix earlier
	  was not thorough enough in its checking.

2001-07-24  John Kirkland  <jpk@bl.org>

	* Fixed bug #442445 "sub-album permissions".  Just skipping
	  over nested albums if I cannot view them.


2001-07-22  Bharat Mediratta  <bharat@menalto.com>

	* Fixed bug #443479 "invalid PHP function in functions.inc"
	  fs_is_executable() was missing from platform/ files.

2001-07-21  John Kirkland  <jpk@bl.org>
	
	* Added ability to statically sort photos by name via the
	  new sort feature.  This feature was added based on discussion
	  between Ken Frank <kffrank@mn.mediaone.net> and 
	  Ed Wilts <ewilts@ewilts.org> on our new Gallery-users mailing 
	  list.

	* uploadDate and itemCaptureDate now set at file upload time.