@@ -77,6 +77,15 @@ if ($gallery->album->getHighlight()) {
     <td><input type="radio" name="sort" value="filename">&nbsp;By Filename</td>
   </tr>
   <tr>
+    <td><input type="radio" name="sort" value="click">&nbsp;By Number of Clicks</td>
+  </tr>
+  <tr>
+    <td><input type="radio" name="sort" value="caption">&nbsp;By Caption</td>
+  </tr>
+  <tr>
+    <td><input type="radio" name="sort" value="comment">&nbsp;By Number of Comments</td>
+  </tr>
+  <tr>
     <td><input type="radio" name="sort" value="random">&nbsp;Randomly</td>
   </tr>
   <tr>
