@@ -1,3 +1,10 @@
+2001-07-31  John Kirkland  <jpk@bl.org>
+
+	* Added 3 new sorting methods.  
+		1.  Sort by number of clicks
+		2.  Sort alphabetically by Captions.
+		3.  Sort by number of comments.
+
 2001-07-30  Bharat Mediratta  <bharat@menalto.com>
 
 	* Added the ability for Gallery to use the Nuke database.  If you
